# book_tracker

./: Cargo.toml  README.md  diesel.toml
curl/: create_user.sh  example.sh
curl/json/: create_user.json
migrations/2024-09-08-161805_add_user/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/controllers/: user.rs
src/models/: user.rs
